in progress to sync azure

--- a/Frontend-Webapp/appsettings.json
+++ b/Frontend-Webapp/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Frontend_Webapp-9d1e3198-64dd-4aba-8863-886072cb66e4;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:sql-win23jsbackend-sannahansson.database.windows.net,1433;Initial Catalog=IdentityDatabase;Persist Security Info=False;User ID=sqladmin;Password=Kopojke10;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "COURSES_APIURI": "https://coursesprovider-win23jsbackend-sannahansson.azurewebsites.net/api/courses",
+    "FILEPROVIDER_UPLOADURI": "https://siliconstoragesh.blob.core.windows.net/profiles/"
   },
   "Logging": {
     "LogLevel": {
